# archaios-system

./: .gitignore  AGENTS.md  LAUNCH_NEXT_STEPS.md  Millennium_Cohort_Summary_Dossier.docx  QLB Pleiadian Project.pages  QLB Pleiadian reference .pages  QX A.i chip design.HEIC  QX Technology .pages  QX water drone design.HEIC  QX_AI_Architecture.md  QX_full_notebook.ipynb  QX_scaffolded_notebook.ipynb  README.md  VERCEL_ENV_VARS.md  agent_core.py  agent_roles.md  approval_trace_demo.py  archaios_agent.py  archaios_control.py  archaios_memory.py  archaios_orchestrator.py  archaios_simple.py  author_agent.py  executor_agent.py  intent_classifier.py  logger.js  mentor_agent.py  middleware.ts  myth_simulator.py  narrative_builder.py  next_actions.md  package-lock.json  package.json  reality_anchor.py  scholar_agent.py  story_engine.py  system_status.md  tsconfig.json  worker.js  wrangler.toml
ai-assassins/: .gitignore  LICENSE  README.md  pyproject.toml
ai-assassins/.github/workflows/: deploy.yml  worker_heartbeat.yml
ai-assassins/backend/: app.py
ai-assassins/frontend/: streamlit_app.py
ai-assassins/legacy/: __init__.py
ai-assassins/legacy/recovery/: __init__.py  rebuild_from_legacy.py
ai-assassins/legacy/templates/: __init__.py  plan_then_act.py
ai-assassins/legacy/workflows/: __init__.py  export_workflow_snapshot.py
ai-assassins/src/ai_assassins_local/: __init__.py  __main__.py  briefing.py
archaios_vault_tools/: Makefile  README.md  pyproject.toml
archaios_vault_tools/scripts/: archaios_capture  archaios_dashboard  archaios_init  archaios_watch
archaios_vault_tools/tests/: test_indexing.py  test_versioning.py
(+659 files in other folders)
